// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PokemonCard /> renders without crashing 1`] = `
<article
  className="Card__CardWrapper-sc-1prdgex-0 hFLESf"
>
  <header
    className="Card__CardHeader-sc-1prdgex-1 gOHdVf"
  >
    <h2
      className="CardHeading-esgf7h-0 hqHCZd"
    >
      #25 Pikachu
    </h2>
  </header>
  <div
    className="Card__CardContent-sc-1prdgex-2 PokemonCard__PokemonCardContent-rhhzvs-0 iHtanm"
  >
    <img
      alt="pikachu sprite"
      className="PokemonCard__PokemonCardSprite-rhhzvs-1 iixLRW"
      src="/sprites/25.png"
    />
    <ul
      className="InlineList-bwsyp4-0 bKIwJu"
    >
      <li>
        <span
          className="TypeTag-sc-19epxam-0 eoDTXf"
          type="ELECTRIC"
        >
          ELECTRIC
        </span>
      </li>
    </ul>
  </div>
</article>
`;

exports[`<PokemonCard /> when a pokemon with incomplete / invalid data is passed renders without crashing 1`] = `
<article
  className="Card__CardWrapper-sc-1prdgex-0 hFLESf"
>
  <header
    className="Card__CardHeader-sc-1prdgex-1 jVbTxc"
  >
    <h2
      className="CardHeading-esgf7h-0 hqHCZd"
    >
      #undefined 
    </h2>
  </header>
  <div
    className="Card__CardContent-sc-1prdgex-2 PokemonCard__PokemonCardContent-rhhzvs-0 iHtanm"
  >
    <img
      alt="undefined sprite"
      className="PokemonCard__PokemonCardSprite-rhhzvs-1 iixLRW"
      src="/sprites/undefined"
    />
    <ul
      className="InlineList-bwsyp4-0 bKIwJu"
    />
  </div>
</article>
`;

exports[`<PokemonCard /> when a pokemon with more than one type is passed renders all types 1`] = `
<article
  className="Card__CardWrapper-sc-1prdgex-0 hFLESf"
>
  <header
    className="Card__CardHeader-sc-1prdgex-1 dXwGGs"
  >
    <h2
      className="CardHeading-esgf7h-0 hqHCZd"
    >
      #1 Bulbasaur
    </h2>
  </header>
  <div
    className="Card__CardContent-sc-1prdgex-2 PokemonCard__PokemonCardContent-rhhzvs-0 iHtanm"
  >
    <img
      alt="bulbasaur sprite"
      className="PokemonCard__PokemonCardSprite-rhhzvs-1 iixLRW"
      src="/sprites/1.png"
    />
    <ul
      className="InlineList-bwsyp4-0 bKIwJu"
    >
      <li>
        <span
          className="TypeTag-sc-19epxam-0 dCWWOO"
          type="GRASS"
        >
          GRASS
        </span>
      </li>
      <li>
        <span
          className="TypeTag-sc-19epxam-0 daqRLF"
          type="POISON"
        >
          POISON
        </span>
      </li>
    </ul>
  </div>
</article>
`;

exports[`<PokemonCard /> when a pokemon with no type is passed renders without crashing 1`] = `
<article
  className="Card__CardWrapper-sc-1prdgex-0 hFLESf"
>
  <header
    className="Card__CardHeader-sc-1prdgex-1 jVbTxc"
  >
    <h2
      className="CardHeading-esgf7h-0 hqHCZd"
    >
      #25 Pikachu
    </h2>
  </header>
  <div
    className="Card__CardContent-sc-1prdgex-2 PokemonCard__PokemonCardContent-rhhzvs-0 iHtanm"
  >
    <img
      alt="pikachu sprite"
      className="PokemonCard__PokemonCardSprite-rhhzvs-1 iixLRW"
      src="/sprites/25.png"
    />
    <ul
      className="InlineList-bwsyp4-0 bKIwJu"
    />
  </div>
</article>
`;

exports[`<PokemonCard /> when a renderCardActions function is passed renders the card actions 1`] = `
<article
  className="Card__CardWrapper-sc-1prdgex-0 hFLESf"
>
  <header
    className="Card__CardHeader-sc-1prdgex-1 gOHdVf"
  >
    <h2
      className="CardHeading-esgf7h-0 hqHCZd"
    >
      #25 Pikachu
    </h2>
  </header>
  <div
    className="Card__CardContent-sc-1prdgex-2 PokemonCard__PokemonCardContent-rhhzvs-0 iHtanm"
  >
    <img
      alt="pikachu sprite"
      className="PokemonCard__PokemonCardSprite-rhhzvs-1 iixLRW"
      src="/sprites/25.png"
    />
    <ul
      className="InlineList-bwsyp4-0 bKIwJu"
    >
      <li>
        <span
          className="TypeTag-sc-19epxam-0 eoDTXf"
          type="ELECTRIC"
        >
          ELECTRIC
        </span>
      </li>
    </ul>
    <div
      className="PokemonCard__PokemonCardActions-rhhzvs-2 dqxORH"
    >
      <div>
        Card actions that should be rendered
      </div>
    </div>
  </div>
</article>
`;

exports[`<PokemonCard /> when pokemon is part of a team (has a member id) renders without crashing 1`] = `
<article
  className="Card__CardWrapper-sc-1prdgex-0 hFLESf"
>
  <header
    className="Card__CardHeader-sc-1prdgex-1 gOHdVf"
  >
    <h2
      className="CardHeading-esgf7h-0 hqHCZd"
    >
      #25 Pikachu
    </h2>
  </header>
  <div
    className="Card__CardContent-sc-1prdgex-2 PokemonCard__PokemonCardContent-rhhzvs-0 iHtanm"
  >
    <img
      alt="pikachu sprite"
      className="PokemonCard__PokemonCardSprite-rhhzvs-1 iixLRW"
      src="/sprites/25.png"
    />
    <ul
      className="InlineList-bwsyp4-0 bKIwJu"
    >
      <li>
        <span
          className="TypeTag-sc-19epxam-0 eoDTXf"
          type="ELECTRIC"
        >
          ELECTRIC
        </span>
      </li>
    </ul>
  </div>
</article>
`;
